2005-01-06  John ffitch  <jpff@codemist.co.uk>

	* All over added first arg to opcodes of the ENVIRON structure

2004-12-23  John ffitch  <jpff@codemist.co.uk>

	* InOut/pmidi.c (GetMIDIData): Read to wrong place!

2004-12-20  John ffitch  <jpff@codemist.co.uk>

	* OOps/mididevice.c: 
	* Top/main.c (signal_handler, csoundCompile): 
	* InOut/widgets.cpp (SNAPSHOT): 
	* H/sysdep.h: 
	* H/csoundCore.h: Added code to allow MSVC compilation

2004-12-19  Michael Gogins <gogins@pipeline.com>

	* Added Java wrapper for the Csound API via CppSound. 
	CsoundVST and Python support do not currently work, but it is now
	possible to run Csound natively from Java. This is designed
	mostly for using Csound in Mathematica through J/Link.

2004-12-19  John ff  <jpff@codemist.co.uk>

	* InOut/pmidi.c (sensMidi): major rehack for PortMIDI structure.
	Not verified yet.

2004-12-18  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (hfgens): Ensure gensub array is initialised

2004-12-14  John ffitch  <jpff@codemist.co.uk>

	* SConstruct: All over use strings for options rather than
	numbers.  Seems to work but take care!

2004-12-12  Michael Gogins <gogins@pipeline.com>

	* Updated to FLTK 1.1.6, libsndfile 1.1.11, CVS PortAudio,
	CVS Loris for Windows pre-built binaries.

	* Added Loris API documentation to Csound reference manual.

2004-12-10  John ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c: and code

	* OOps/sndinfUG.c (getsndinfo): Removed unused called to readheader

2004-12-03  Michael Gogins <gogins@pipeline.com>

	* Tried to remove most remaining compiler warnings: mostly returning 
	int from main, sscanf for %lf with USE_DOUBLE, type casting, etc.

2004-12-02  John ffitch  <jpff@codemist.co.uk>

	* SConstruct (else): Added PortMIDI build option to aid experimentation.

2004-11-30  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c (signal_handler): Move message to after check for alarm

2004-11-25  Michael Gogins <gogins@pipeline.com>
