@@ -1,3 +1,8 @@
+2005-01-16  John ffitch  <jpff@codemist.co.uk>
+
+	* InOut/pa_blocking.c (paBlockingWriteStreamCallback): Fixed
+	incorrect declaration
+
 2005-01-06  John ffitch  <jpff@codemist.co.uk>
 
 	* All over added first arg to opcodes of the ENVIRON structure
